--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <nav class="navbar navbar-light bg-light">
             <h1>MyToDoList</h1>
             <div class="d-flex">
-                <button type="button" class="btn btn-primary mx-2"><i class="fas fa-sort-numeric-up-alt" aria-hidden="true"></i></button>
-                <button type="button" class="btn btn-primary"><i class="fas fa-sort-numeric-up" aria-hidden="true"></i></button>
+                <button id="sort-from-new" type="button" class="btn btn-primary mx-2"><i class="fas fa-sort-numeric-up-alt" aria-hidden="true"></i></button>
+                <button id="sort-from-old" type="button" class="btn btn-primary"><i class="fas fa-sort-numeric-up" aria-hidden="true"></i></button>
+                <button id="save" type="button" class="btn btn-primary mx-2"><i class="fas fa-save" aria-hidden="true"></i></button>
             </div>
             <div class="d-flex">
                 <button id="new-task" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -31,7 +32,7 @@
                         <i class="fas fa-cog" aria-hidden="true"></i>
                     </button>
                     <div class="dropdown-menu p-2 dropdown-menu-right" aria-labelledby="dropdownMenuSettings">
-                        You should add settings here
+                        Feature in development
                     </div>
                 </div>
             </div>
@@ -49,7 +50,7 @@
         </div>
     </div>
 
-    <!-- Modal -->
+    <!-- Modal ADD Task -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -78,7 +79,7 @@
                                 <legend class="col-form-label col-sm-2 pt-0">Priority</legend>
                                 <div class="col-sm-10">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="gridRadios" id="Low" value="Low" required="">
+                                        <input class="form-check-input" type="radio" name="gridRadios" id="Low" value="Low" required="" checked>
                                         <label class="form-check-label" for="Low">
                                             Low
                                         </label>
