feat: add colorize task and theme mode switcher

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                         <i class="fas fa-cog" aria-hidden="true"></i>
                     </button>
                     <div class="dropdown-menu p-2 dropdown-menu-right" aria-labelledby="dropdownMenuSettings">
-                        Feature in development
+                        <div class="custom-control custom-switch">
+                            <input type="checkbox" class="custom-control-input" id="customSwitch1">
+                            <label class="custom-control-label" for="customSwitch1">White mode</label>
+                        </div>
                     </div>
                 </div>
             </div>
